Set up React Bootstrap for UI

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.avatar {
+  width: 35px; 
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-img {
+  aspect-ratio: 5/4; 
+  object-fit: contain;
+}
